added codecov to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,14 @@ python:
 
 install:
   - pip install .
+  - pip install codecov
 
 script:
   - python setup.py test
 
 after_success:
 - echo "Success!"
+- codecov
 
 after_failure:
 - echo "Failure!"
